--- a/blog.html
+++ b/blog.html
@@ -93,6 +93,12 @@
 
                 <h2>Conclusion</h2>
                 <p>While predatory publishing is a real issue in the academic community, it is not solely a matter of bad actors; it’s also a reflection of the underlying power dynamics and inequities in the global publishing system. Labeling certain journals as predatory can sometimes be a political maneuver that undermines legitimate efforts to democratize access to knowledge. To address this challenge effectively, we need a more nuanced conversation that considers both the ethical challenges of publishing and the broader political forces shaping the academic landscape.</p>
+
+                <h2>References</h2>
+                <p>1. Mills D, Inouye K. Problematizing ‘predatory publishing’: A systematic review of factors shaping publishing motives, decisions, and experiences. Learned Publishing. 2021 Apr;34(2):89-104.</p>
+                <p>2. Le Grange L. On" predatory" publishing: A reply to Maistry. Journal of Education (University of KwaZulu-Natal). 2019(75):20-32.</p>
+                <p>3. Boncourt T, Mills D. The Changing Economics of Academic Publishing and the Discourse of “Predatory” Science. InRoutledge Handbook of Academic Knowledge Circulation 2023 (pp. 319-330). Routledge.</p>
+                <p>4. Harvey HB, Weinstein DF. Predatory publishing: an emerging threat to the medical literature. Academic Medicine. 2017 Feb 1;92(2):150-1.</p>
                 ">
                 <img src="https://wallpapercave.com/wp/wp2514205.jpg" alt="Academic Publishing">
                     <div class="blog-content">
