--- a/water-quality.html
+++ b/water-quality.html
@@ -28,8 +28,8 @@
                 <div class="ppt-icon">
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
-                <h2>Lecture 3</h2>
-                <a href="0" download class="download-btn">Download</a>
+                <h2>Lecture 3 - Water Sources</h2>
+                <a href="https://drive.google.com/uc?export=download&id=1iC-C9jjuR3ziA2apNvNc9nJha51quBHB" download class="download-btn">Download</a>
             </div>            
             <div class="note-card">
                 <div class="ppt-icon">
