--- a/water-quality.html
+++ b/water-quality.html
@@ -35,8 +35,8 @@
                 <div class="ppt-icon">
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
-                <h2>Lecture 4</h2>
-                <a href="0" download class="download-btn">Download</a>
+                <h2>Lecture 4 - Drinking Water Quality Testing</h2>
+                <a href="https://drive.google.com/uc?export=download&id=1ShnHYJE6xbRIMqkRFT6xVp0vv0hPNMcl" download class="download-btn">Download</a>
             </div>      
             <div class="note-card">
                 <div class="ppt-icon">
