--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                     <a href="https://orcid.org/0009-0007-6743-8479" target="_blank"><i class="fab fa-orcid"></i></a>
                     <a href="https://github.com/january-msemakweli" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="https://scholar.google.com/citations?user=8SiYFvMAAAAJ&hl=en" target="_blank"><i class="fab fa-google"></i></a>
+                    <a href="https://www.researchgate.net/profile/January-Msemakweli-2" target="_blank"><i class="fab fa-researchgate"></i></a>
                 </div>
             </div>
         </div>
