--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <div class="hero-content">
             <h1>January G. Msemakweli</h1>
             <p>A young Researcher Experienced in Data Analysis</p>
+            <a href="https://www.researchgate.net/profile/January-Msemakweli-2">January G. Msemakweli on ResearchGate</a>
             <p class="sub-text">Based in Dar es Salaam, Tanzania</p>
             <a href="#contact" class="cta-button">Contact</a>
             <a href="colleagues.html" class="cta-button colleagues-btn">Colleagues</a>
