--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h1>January G. Msemakweli</h1>
             <p>A young Researcher Experienced in Data Analysis</p>
             <p class="sub-text">Based in Dar es Salaam, Tanzania</p>
-            <a href="#contact" class="cta-button">Contact</a>
+            <a href="https://www.researchgate.net/profile/January-Msemakweli-2" class="cta-button">Research</a>
             <a href="colleagues.html" class="cta-button colleagues-btn">Colleagues</a>
         </div>
     </section>
