--- a/notes.html
+++ b/notes.html
@@ -18,7 +18,7 @@
             <div class="note-card">
                 <h2>Epidemiology and Biostatistics</h2>
                 <p>Explore disease patterns and statistical analysis methods.</p>
-                <a href="epidemiology.html" class="download-btn">Explore Notes</a>
+                <a href="epi.html" class="download-btn">Explore Notes</a>
             </div>
             <div class="note-card">
                 <h2>Disaster Management and Bioterrorism</h2>
