--- a/notes.html
+++ b/notes.html
@@ -21,7 +21,7 @@
                 <a href="epi.html" class="download-btn">Explore Notes</a>
             </div>
             <div class="note-card">
-                <h2>Disaster Management and Bioterrorism</h2>
+                <h2>Disaster and Bioterrorism</h2>
                 <p>Understand disaster preparedness, response, and resilience.</p>
                 <a href="disaster-management.html" class="download-btn">Explore Notes</a>
             </div>
