--- a/epi.html
+++ b/epi.html
@@ -36,14 +36,14 @@
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
                 <h2>Measures of Summary and Dispersion</h2>
-                <a href="SUMMARY MEASURES" download class="download-btn">Download</a>
+                <a href="https://drive.google.com/uc?export=download&id=1L2SD_8fdsQojdxQpKdgfebcyLYK-NHIQ" download class="download-btn">Download</a>
             </div>      
             <div class="note-card">
                 <div class="ppt-icon">
                     <img src="icons/ppt-icon.png" alt="PPT Icon" class="icon">
                 </div>
-                <h2>Lecture 5</h2>
-                <a href="0" download class="download-btn">Download</a>
+                <h2>Probabilities & Normal Distribution</h2>
+                <a href="https://drive.google.com/uc?export=download&id=1j3_E3XxpAfUh-bdJnJIp3AnGjxAuHyDl" download class="download-btn">Download</a>
             </div>       
             <div class="note-card">
                 <div class="ppt-icon">
